--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "node --watch index.js",
+        "db:create": "psql -U okanban -d okanban -f ./data/create_table.sql"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.0",
         "eslint-plugin-import": "^2.29.1",
         "nodemon": "^3.1.0"
     },
     "dependencies": {
         "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
+        "email-validator": "^2.0.4",
         "express": "^4.19.2",
         "pg": "^8.11.5",
         "sequelize": "^6.37.3"
