--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-    "name": "okanban",
-    "version": "1.0.0",
-    "description": "## Description du projet",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "node --watch index.js",
-        "db:create": "psql -U okanban -d okanban -f ./data/create_table.sql"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "eslint": "^8.57.0",
-        "eslint-plugin-import": "^2.29.1",
-        "nodemon": "^3.1.0"
-    },
-    "dependencies": {
-        "dotenv": "^16.4.5",
-        "ejs": "^3.1.10",
-        "email-validator": "^2.0.4",
-        "express": "^4.19.2",
-        "pg": "^8.11.5",
-        "sequelize": "^6.37.3"
-    }
+  "name": "okanban",
+  "version": "1.0.0",
+  "description": "## Description du projet",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js",
+    "db:create-role": "psql -U postgres -c \"CREATE ROLE okanban WITH LOGIN PASSWORD 'okanban'\" || echo 'Role already exists'",
+    "db:create-db": "psql -U postgres -c \"CREATE DATABASE okanban OWNER okanban\"",
+    "db:create": "npm run db:create-role && npm run db:create-db",
+    "db:tables": "psql -U okanban -d okanban -f ./data/create_tables.sql",
+    "db:seed": "psql -U okanban -d okanban -f ./data/seeding.sql",
+    "db:setup": "npm run db:create && npm run db:tables && npm run db:seed"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "email-validator": "^2.0.4",
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3"
+  }
 }
