--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 BASE_URL=http://localhost
 PORT=5000
 PG_URL=postgres://okanban:okanban@localhost/okanban
+SESSION_SECRET=Le okanban c'est fanstatique !
