--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,16 @@ services:
       - db-data:/var/lib/postgresql/data
       - ./data:/docker-entrypoint-initdb.d
     ports:
-      - "5433:5432"  
+      - "5433:5432"
   app:
     image: node:14
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
     ports:
-      - "3000:3000"
-    environment:
-      - PG_URL=postgres://okanban:okanban@db:5432/okanban
-      - PORT=3000
+      - "5000:5000"
+    env_file:
+      - .env
     depends_on:
       - db
     command: sh -c "npm install && npm start"
