--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   }
