--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "nodemon": "^3.1.0"
+    "eslint-plugin-import": "^2.29.1"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
