--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "joi": "^17.13.3",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   }
