--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:13
     environment:
       POSTGRES_USER: okanban
-      POSTGRES_PASSWORD: 1gGxYVTCH%r1Kmn&5ec
+      POSTGRES_PASSWORD: 1gGxYVTCHr1Kmn5ec
       POSTGRES_DB: okanban
     volumes:
       - db-data:/var/lib/postgresql/data
