--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BASE_URL=http://localhost
 PORT=5000
-PG_URL=postgres://okanban:1gGxYVTCHr1Kmn5ec@localhost/okanban
+PG_URL=postgres://okanban:1gGxYVTCHr1Kmn5ec@db:5432/okanban
 SESSION_SECRET=Le okanban c'est fanstatique !
